--- a/Sprint 7/TascaS701.ipynb
+++ b/Sprint 7/TascaS701.ipynb
@@ -13,14 +13,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Su índice de masa corporal (IMC) es de 26.73.\n",
+      "Dato erróneo. Por favor, introduzca de nuevo su peso en kilogramos (hasta 2 decimales). Use solo dígitos y el punto como separador de decimales.\n",
+      "Dato erróneo. Por favor, introduzca de nuevo su altura en metros (hasta 2 decimales). Use solo dígitos y el punto como separador de decimales.\n",
+      "Su índice de masa corporal (IMC) es de 26.64.\n",
       "Según su IMC, su peso se sitúa en el rango del sobrepeso.\n"
      ]
     }
@@ -86,18 +88,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "La temperatura medida es de 14.5 ºRe\n",
-      "Corresponde a 18.12 ºC\n",
-      "Corresponde a 291.27 ºK\n",
-      "Corresponde a 64.62 ºF\n",
-      "Corresponde a 524.3 ºRa\n"
+      "Dato erróneo. Por favor, introduzca de nuevo el valor de la temperatura. Use solo dígitos y el punto como separador de decimales.\n",
+      "Valor erróneo. Por favor, introduzca solo números del 1 al 5.\n",
+      "La temperatura medida es de 9.5 ºC\n",
+      "Corresponde a 282.65 ºK\n",
+      "Corresponde a 49.1 ºF\n",
+      "Corresponde a 508.77 ºRa\n",
+      "Corresponde a 7.6 ºRe\n"
      ]
     }
    ],
@@ -290,76 +294,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\"tú\" aparece 8 veces.\n",
-      "\"quieres\" aparece 6 veces.\n",
-      "\"me\" aparece 10 veces.\n",
-      "\"de\" aparece 8 veces.\n",
-      "\"sea\" aparece 1 veces.\n",
-      "\"sobre\" aparece 2 veces.\n",
-      "\"casta\" aparece 3 veces.\n",
-      "\"tenue\" aparece 1 veces.\n",
-      "\"cerrada\" aparece 1 veces.\n",
-      "\"un\" aparece 1 veces.\n",
-      "\"luna\" aparece 1 veces.\n",
-      "\"haya\" aparece 1 veces.\n",
-      "\"una\" aparece 1 veces.\n",
-      "\"se\" aparece 2 veces.\n",
-      "\"mi\" aparece 1 veces.\n",
-      "\"nívea\" aparece 2 veces.\n",
-      "\"alba\" aparece 4 veces.\n",
-      "\"todas\" aparece 2 veces.\n",
-      "\"a\" aparece 3 veces.\n",
-      "\"frutos\" aparece 1 veces.\n",
-      "\"mieles\" aparece 1 veces.\n",
-      "\"labios\" aparece 1 veces.\n",
-      "\"que\" aparece 6 veces.\n",
-      "\"cubierto\" aparece 1 veces.\n",
-      "\"dejaste\" aparece 1 veces.\n",
-      "\"carnes\" aparece 2 veces.\n",
-      "\"baco\" aparece 1 veces.\n",
-      "\"los\" aparece 4 veces.\n",
-      "\"del\" aparece 1 veces.\n",
-      "\"vestido\" aparece 1 veces.\n",
-      "\"corriste\" aparece 1 veces.\n",
-      "\"estrago\" aparece 1 veces.\n",
-      "\"esqueleto\" aparece 1 veces.\n",
-      "\"intacto\" aparece 1 veces.\n",
-      "\"sé\" aparece 1 veces.\n",
-      "\"por\" aparece 2 veces.\n",
-      "\"milagros\" aparece 1 veces.\n",
-      "\"blanca\" aparece 3 veces.\n",
-      "\"lo\" aparece 2 veces.\n",
-      "\"pretendes\" aparece 3 veces.\n",
-      "\"perdone\" aparece 2 veces.\n",
-      "\"bosques\" aparece 1 veces.\n",
-      "\"la\" aparece 3 veces.\n",
-      "\"límpiate\" aparece 1 veces.\n",
-      "\"vive\" aparece 1 veces.\n",
-      "\"las\" aparece 7 veces.\n",
-      "\"manos\" aparece 1 veces.\n",
-      "\"mojada\" aparece 1 veces.\n",
-      "\"el\" aparece 4 veces.\n",
-      "\"amarga\" aparece 1 veces.\n",
-      "\"rocas\" aparece 1 veces.\n",
-      "\"escarcha\" aparece 1 veces.\n",
-      "\"tejidos\" aparece 1 veces.\n",
-      "\"salitre\" aparece 1 veces.\n",
-      "\"agua\" aparece 1 veces.\n",
-      "\"con\" aparece 4 veces.\n",
-      "\"y\" aparece 5 veces.\n",
-      "\"cuando\" aparece 2 veces.\n",
-      "\"en\" aparece 4 veces.\n",
-      "\"enredada\" aparece 1 veces.\n",
-      "\"buen\" aparece 1 veces.\n",
-      "\"preténdeme\" aparece 3 veces.\n"
-     ]
+     "data": {
+      "text/plain": [
+       "{'a': 3,\n",
+       " 'agua': 1,\n",
+       " 'al': 2,\n",
+       " 'alba': 4,\n",
+       " 'alcobas': 1,\n",
+       " 'alma': 1,\n",
+       " 'arena': 1,\n",
+       " 'baco': 1,\n",
+       " 'bebe': 1,\n",
+       " 'blanca': 3,\n",
+       " 'bosques': 1,\n",
+       " 'cabañas': 1,\n",
+       " 'carnes': 2,\n",
+       " 'casta': 3,\n",
+       " 'con': 2,\n",
+       " 'copas': 1,\n",
+       " 'corriste': 1,\n",
+       " 'cuando': 2,\n",
+       " 'cuerpo': 1,\n",
+       " 'de': 4,\n",
+       " 'dejaste': 1,\n",
+       " 'diga': 1,\n",
+       " 'dios': 2,\n",
+       " 'el': 2,\n",
+       " 'en': 2,\n",
+       " 'enredada': 1,\n",
+       " 'escarcha': 1,\n",
+       " 'esqueleto': 1,\n",
+       " 'festejando': 1,\n",
+       " 'frutos': 1,\n",
+       " 'hacia': 1,\n",
+       " 'hayas': 1,\n",
+       " 'hombre': 1,\n",
+       " 'huye': 1,\n",
+       " 'jardines': 1,\n",
+       " 'la': 4,\n",
+       " 'labios': 1,\n",
+       " 'las': 3,\n",
+       " 'los': 2,\n",
+       " 'lévate': 1,\n",
+       " 'mano': 1,\n",
+       " 'margarita': 1,\n",
+       " 'me': 5,\n",
+       " 'mieles': 1,\n",
+       " 'mojada': 1,\n",
+       " 'morados': 1,\n",
+       " 'negros': 1,\n",
+       " 'ni': 2,\n",
+       " 'nácar': 1,\n",
+       " 'nívea': 2,\n",
+       " 'perdone': 2,\n",
+       " 'piel': 1,\n",
+       " 'por': 2,\n",
+       " 'pretendes': 3,\n",
+       " 'preténdeme': 3,\n",
+       " 'pájaros': 1,\n",
+       " 'que': 3,\n",
+       " 'quieres': 3,\n",
+       " 'raíz': 1,\n",
+       " 'rocas': 1,\n",
+       " 'salitre': 1,\n",
+       " 'se': 2,\n",
+       " 'sean': 1,\n",
+       " 'sobre': 3,\n",
+       " 'te': 3,\n",
+       " 'tejidos': 1,\n",
+       " 'tierra': 1,\n",
+       " 'todas': 2,\n",
+       " 'todavía': 1,\n",
+       " 'tu': 1,\n",
+       " 'tú': 4,\n",
+       " 'una': 1,\n",
+       " 'vete': 1,\n",
+       " 'y': 2}"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -373,8 +392,13 @@
     "    # Creamos la lista palabras:\n",
     "    palabras = []\n",
     "\n",
-    "    # Y almacenamos en ella las palabras del texto\n",
+    "    # Y un diccionario para guardar las veces que aparece cada palabra:\n",
+    "    diccionario_texto = {}\n",
+    "\n",
+    "    # Y almacenamos en la lista las palabras del texto\n",
     "    palabras.extend(texto.split())\n",
+    "    # Ordenamos alfabéticamente la lista\n",
+    "    palabras.sort()\n",
     "\n",
     "    # Iteramos a lo largo de la lista palabras.\n",
     "    # Contamos cuántas veces aparece el elemento que estamos iterando\n",
@@ -382,14 +406,17 @@
     "    # cuando la palabra aparezca más adelante en el texto:\n",
     "    for i in palabras:\n",
     "        n = palabras.count(i)\n",
-    "        print(f'\"{i}\" aparece {n} veces.')\n",
+    "        # print(f'\"{i}\" aparece {n} veces.')\n",
     "        for j in palabras:\n",
     "            if j == i:\n",
     "                palabras.remove(j)\n",
+    "        # Guardamos en un diccionario los pares palabra y número de apariciones:\n",
+    "        diccionario_texto[i] = n\n",
+    "        \n",
+    "    return(diccionario_texto)\n",
     " \n",
     "# Importamos un texto:\n",
-    "with open('/Users/Edicion/Library/CloudStorage/GoogleDrive-alex.vidal.bermudez@gmail.com/Mi unidad/Data Analytics/Sprint 7/tu_me_quieres_blanca.txt', mode='r', encoding='utf-8') as archivo: #Versión Mac OS X\n",
-    "# with open('D:\\\\CiberConnecta_17\\\\Downloads\\\\tu_me_quieres_blanca.txt', mode='r', encoding='utf-8') as archivo: #Versión Windows\n",
+    "with open('D:\\\\CiberConnecta_17\\\\Downloads\\\\tu_me_quieres_blanca.txt', mode='r', encoding='utf-8') as archivo: #Versión Windows\n",
     "    contenido = archivo.read()\n",
     "\n",
     "# Ejecutamos la función:\n",
@@ -408,14 +435,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'1': 'Betis', '3': 'Barça', '2': 'Espanyol', '4': 'Europa', '5': 'El Prat'}\n"
+      "{'1': 'Betis', '3': 'Barça', '6': 'Espanyol', '4': 'Europa', '5': 'El Prat'}\n"
      ]
     }
    ],
@@ -451,7 +478,7 @@
     "    print(diccionario_inverso)\n",
     "\n",
     "# Creamos un diccionario de prueba:\n",
-    "diccionario_prueba = {'Betis':'1', 'Barça':'3', 'Espanyol':'2', 'Europa':'4', 'El Prat':'5'}\n",
+    "diccionario_prueba = {'Betis':'1', 'Barça':'3', 'Espanyol':'6', 'Europa':'4', 'El Prat':'5'}\n",
     "\n",
     "# Y probamos la función:\n",
     "diccionario_inverso(diccionario_prueba)\n"
@@ -471,14 +498,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'1': 'Betis', '2': ['Barça', 'Espanyol', 'El Prat'], '4': 'Europa', '3': 'Sevilla', 3: 'Athletic', 6: ['Oviedo', 'Sporting']}\n"
+      "{'1': 'Betis', '2': ['Barça', 'Espanyol', 'El Prat'], '4': 'Europa', '3': 'Sevilla', 6: ['Athletic', 'Oviedo', 'Sporting']}\n"
      ]
     }
    ],
@@ -518,7 +545,7 @@
     "    print(diccionario_inverso)\n",
     "\n",
     "# Creamos un diccionario de prueba:\n",
-    "diccionario_prueba = {'Betis':'1', 'Barça':'2', 'Espanyol':'2', 'Europa':'4', 'El Prat':'2', 'Sevilla':'3', 'Athletic': 3, 'Oviedo': 6, 'Sporting': 6}\n",
+    "diccionario_prueba = {'Betis':'1', 'Barça':'2', 'Espanyol':'2', 'Europa':'4', 'El Prat':'2', 'Sevilla':'3', 'Athletic': 6, 'Oviedo': 6, 'Sporting': 6}\n",
     "\n",
     "# Y probamos el funcionamiento:\n",
     "diccionario_inverso(diccionario_prueba)"
@@ -536,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -611,90 +638,64 @@
        "  'alba': 4,\n",
        "  'alcobas': 1,\n",
        "  'alma': 1,\n",
-       "  'azucena': 1},\n",
-       " 'b': {'banquete': 1, 'blanca': 3, 'boca': 1, 'buen': 1},\n",
-       " 'c': {'carnes': 2,\n",
+       "  'arena': 1},\n",
+       " 'b': {'baco': 1, 'bebe': 1, 'blanca': 3, 'bosques': 1},\n",
+       " 'c': {'cabañas': 1,\n",
+       "  'carnes': 2,\n",
        "  'casta': 3,\n",
-       "  'cerrada': 1,\n",
-       "  'con': 4,\n",
-       "  'conservas': 1,\n",
-       "  'corola': 1,\n",
+       "  'con': 2,\n",
+       "  'copas': 1,\n",
+       "  'corriste': 1,\n",
        "  'cuando': 2,\n",
-       "  'cubierto': 1,\n",
-       "  'cuáles': 1},\n",
-       " 'd': {'de': 4, 'del': 1, 'dios': 2, 'duerme': 1},\n",
-       " 'e': {'el': 4,\n",
-       "  'ellas': 1,\n",
-       "  'en': 4,\n",
-       "  'engaño': 1,\n",
-       "  'entonces': 1,\n",
-       "  'espumas': 1,\n",
-       "  'estrago': 1},\n",
-       " 'f': {'filtrado': 1},\n",
-       " 'h': {'habla': 1, 'haya': 1, 'hermana': 1, 'hubiste': 1},\n",
-       " 'i': {'intacto': 1},\n",
-       " 'l': {'la': 3, 'labios': 1, 'las': 3, 'los': 2, 'lévate': 1},\n",
+       "  'cuerpo': 1},\n",
+       " 'd': {'de': 4, 'dejaste': 1, 'diga': 1, 'dios': 2},\n",
+       " 'e': {'el': 2, 'en': 2, 'enredada': 1, 'escarcha': 1, 'esqueleto': 1},\n",
+       " 'f': {'festejando': 1, 'frutos': 1},\n",
+       " 'h': {'hacia': 1, 'hayas': 1, 'hombre': 1, 'huye': 1},\n",
+       " 'j': {'jardines': 1},\n",
+       " 'l': {'la': 4, 'labios': 1, 'las': 3, 'los': 2, 'lévate': 1},\n",
        " 'm': {'mano': 1,\n",
        "  'margarita': 1,\n",
        "  'me': 5,\n",
        "  'mieles': 1,\n",
        "  'mojada': 1,\n",
        "  'morados': 1},\n",
-       " 'n': {'ni': 2, 'no': 1, 'nívea': 2},\n",
+       " 'n': {'negros': 1, 'ni': 2, 'nácar': 1, 'nívea': 2},\n",
        " 'p': {'perdone': 2,\n",
-       "  'perfume': 1,\n",
+       "  'piel': 1,\n",
        "  'por': 2,\n",
        "  'pretendes': 3,\n",
        "  'preténdeme': 3,\n",
        "  'pájaros': 1},\n",
        " 'q': {'que': 3, 'quieres': 3},\n",
        " 'r': {'raíz': 1, 'rocas': 1},\n",
-       " 's': {'salitre': 1, 'se': 2, 'sean': 1, 'sobre': 2},\n",
-       " 't': {'te': 3, 'tejidos': 1, 'tierra': 1, 'todas': 2, 'todavía': 1, 'tú': 4},\n",
-       " 'u': {'un': 1},\n",
-       " 'v': {'vestido': 1, 'vive': 1},\n",
-       " 'y': {'y': 5}}"
+       " 's': {'salitre': 1, 'se': 2, 'sean': 1, 'sobre': 3},\n",
+       " 't': {'te': 3,\n",
+       "  'tejidos': 1,\n",
+       "  'tierra': 1,\n",
+       "  'todas': 2,\n",
+       "  'todavía': 1,\n",
+       "  'tu': 1,\n",
+       "  'tú': 4},\n",
+       " 'u': {'una': 1},\n",
+       " 'v': {'vete': 1},\n",
+       " 'y': {'y': 2}}"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Importamos la biblioteca string para usar la función ascii_lowercase\n",
-    "# y generar fácilmente una lista con el alfabeto (inglés)\n",
-    "import string \n",
-    "\n",
     "def diccionario_contador(texto):\n",
-    "    # Sustituimos todo caracter que no sea alfabético por un espacio:\n",
-    "    for caracter in texto:\n",
-    "        if caracter.isalpha() == False:\n",
-    "            texto = texto.replace(caracter, ' ')\n",
-    "            texto = texto.lower() #lo bajamos todo a minúsculas\n",
     "\n",
-    "    # Creamos la lista palabras:\n",
-    "    palabras = []\n",
-    "\n",
-    "    # Y un diccionario para guardar las veces que aparece cada palabra:\n",
-    "    diccionario_texto = {}\n",
-    "\n",
-    "    # Almacenamos en la lista las palabras del texto:\n",
-    "    palabras.extend(texto.split())\n",
-    "    # Las ordenamos alfabéticamente\n",
-    "    palabras.sort()\n",
-    "\n",
-    "    # Iteramos en la lista palabras.\n",
-    "    # Contamos cuántas veces aparece el elemento que iteramos\n",
-    "    # y, una vez lo contamos, lo eliminamos de la lista\n",
-    "    for i in palabras:\n",
-    "        n = palabras.count(i)\n",
-    "        for j in palabras:\n",
-    "            if j == i:\n",
-    "                palabras.remove(j)\n",
-    "        # Guardamos en un diccionario los pares palabra y número de apariciones:\n",
-    "        diccionario_texto[i] = n\n",
-    "\n",
+    "    # Importamos la biblioteca string para usar la función ascii_lowercase\n",
+    "    # y generar fácilmente una lista con el alfabeto (inglés)\n",
+    "    import string \n",
+    "    \n",
+    "    # Creamos un diccionario con el recuento de palabras del texto:    \n",
+    "    diccionario_texto = contador_palabras(texto)\n",
     "    # Creamos la variable letra, que recorrerá el abecedario:\n",
     "    letra = string.ascii_lowercase\n",
     "\n",
@@ -707,20 +708,21 @@
     "    # Iteramos por cada letra del abecedario\n",
     "    for l in letra:\n",
     "        diccionario_letra = {}\n",
-    "        # Recorremos el diccionario_texto y nos fijamos si la primera letra de la clave\n",
-    "        # del diccionario_texto coincide con la letra del abecedario del bucle\n",
-    "        # para incorporarlo como valor:\n",
+    "        # Recorremos el diccionario_texto. Por cada pareja clave:valor, nos fijamos si la primera letra de la clave\n",
+    "        # del diccionario_texto coincide con el carácter de la iteración l de la lista letra. Si coincide,\n",
+    "        # incorporamos el par palabra:recuento en diccionario_letra para este valor de l:\n",
     "        for k in diccionario_texto:\n",
     "            if k[0] == l:\n",
     "                diccionario_letra[k] = diccionario_texto.get(k)\n",
+    "        # Si la longitud lista diccionario_letra es mayor que cero, añadiremos al diccionario_contador_letra\n",
+    "        # el par letra:{diccionaro_letra} para el valor l, \n",
     "        if len(diccionario_letra) != 0:\n",
     "            diccionario_contador_letra[l] = diccionario_letra\n",
     "\n",
     "    return diccionario_contador_letra\n",
     "\n",
     "# Importamos un texto:\n",
-    "with open('/Users/Edicion/Library/CloudStorage/GoogleDrive-alex.vidal.bermudez@gmail.com/Mi unidad/Data Analytics/Sprint 7/tu_me_quieres_blanca.txt', mode='r', encoding='utf-8') as archivo:\n",
-    "# with open('D:\\\\CiberConnecta_17\\\\Downloads\\\\tu_me_quieres_blanca.txt', mode='r', encoding='utf-8') as archivo:\n",
+    "with open('D:\\\\CiberConnecta_17\\\\Downloads\\\\tu_me_quieres_blanca.txt', mode='r', encoding='utf-8') as archivo:\n",
     "    contenido = archivo.read()\n",
     "\n",
     "# Y probamos la función:\n",
