--- a/Sprint 8/TascaS802.ipynb
+++ b/Sprint 8/TascaS802.ipynb
@@ -444,7 +444,10 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
-    "sns.lineplot(x=dataset['Mes'], y=dataset['size'], marker='o', linestyle='-')\n",
+    "#Tenemos un problema con el orden del eje x. Vamos a ordenar el DataFrame antes de graficar:\n",
+    "dataset.sort_values('period', inplace=True)\n",
+    "\n",
+    "sns.lineplot(x=dataset['period'], y=dataset['size'], marker='o', linestyle='-', sort=False)\n",
     "\n",
     "plt.title('Transacciones declinadas por periodo')\n",
     "plt.ylabel('Transacciones declinadas')\n",
