--- a/Sprint 8/TascaS801.ipynb
+++ b/Sprint 8/TascaS801.ipynb
@@ -18,10 +18,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Importamos la librería para leer el fichero con los datos de conexión a la base de datos:\n",
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
     "#Importamos las librerías necesarias para manejar los datos y crear las gráficas:\n",
     "\n",
     "import pandas as pd\n",
@@ -41,19 +45,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Conectamos con la base de datos 'transactions_alex' en MySQL Workbench:"
+    "Conectamos con la base de datos 'transactions_alex' en MySQL Workbench. Para ello, recuperamos las credenciales que guardamos en un archivo de entorno .env en la raíz del proyecto."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Conectado con la version 8.0.40 de MySQL Server\n",
+      "Your host is: localhost\n",
+      "User is: root\n",
+      "Password is: root\n",
+      "Database is: transactions_alex\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Load variables from .env file\n",
+    "load_dotenv()\n",
+    "# Access the variables\n",
+    "usuario = os.getenv(\"usuario\")\n",
+    "clave = os.getenv(\"clave\")\n",
+    "host = os.getenv(\"host\")\n",
+    "db = os.getenv(\"db\")\n",
+    "print(f\"Your host is: {host}\")\n",
+    "print(f\"User is: {usuario}\")\n",
+    "print(f\"Password is: {clave}\")\n",
+    "print(f\"Database is: {db}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Conectado con la version 8.0.28 de MySQL Server\n",
       "Conexión establecida con la base de datos transactions_alex\n",
       "[('company',), ('credit_card',), ('credit_card_status',), ('product',), ('transaction',), ('transaction_products',), ('user',)]\n",
       "Tabla company: \n",
@@ -71,12 +105,12 @@
       "3                mauris.ut@aol.couk        Germany   \n",
       "4       sed.dictum.proin@outlook.ca    New Zealand   \n",
       "\n",
-      "                            website  \n",
-      "0      https://instagram.com/site\\r  \n",
-      "1    https://whatsapp.com/group/9\\r  \n",
-      "2  https://pinterest.com/sub/cars\\r  \n",
-      "3        https://cnn.com/user/110\\r  \n",
-      "4    https://netflix.com/settings\\r   \n",
+      "                          website  \n",
+      "0      https://instagram.com/site  \n",
+      "1    https://whatsapp.com/group/9  \n",
+      "2  https://pinterest.com/sub/cars  \n",
+      "3        https://cnn.com/user/110  \n",
+      "4    https://netflix.com/settings   \n",
       "\n",
       "Tabla credit_card: \n",
       "          id user_id                          iban                 pan   pin  \\\n",
@@ -140,11 +174,11 @@
       "\n",
       "Tabla transaction_products: \n",
       "                          transaction_id product_id\n",
-      "0  02C6201E-D90A-1859-B4EE-88D2986D3B02         71\n",
-      "1  0466A42E-47CF-8D24-FD01-C0B689713128         47\n",
-      "2  063FBA79-99EC-66FB-29F7-25726D1764A5         47\n",
-      "3  0668296C-CDB9-A883-76BC-2E4C44F8C8AE         89\n",
-      "4  06CD9AA5-9B42-D684-DDDD-A5E394FEBA99         43 \n",
+      "0  02C6201E-D90A-1859-B4EE-88D2986D3B02         19\n",
+      "1  02C6201E-D90A-1859-B4EE-88D2986D3B02          1\n",
+      "2  02C6201E-D90A-1859-B4EE-88D2986D3B02         71\n",
+      "3  0466A42E-47CF-8D24-FD01-C0B689713128         43\n",
+      "4  0466A42E-47CF-8D24-FD01-C0B689713128         97 \n",
       "\n",
       "Tabla user: \n",
       "     id     name   surname           phone                         email  \\\n",
@@ -173,12 +207,79 @@
     }
    ],
    "source": [
-    "#Definimos las variables con las credenciales de la base de datos:\n",
-    "usuario = 'root'\n",
-    "clave = 'root'\n",
-    "host = 'localhost'\n",
-    "db = 'transactions_alex'\n",
     "\n",
+    "#Importamos los datos de nuestra base de datos:\n",
+    "try:\n",
+    "    db_transactions = sql.connect(host = host,\n",
+    "                                         database = db,\n",
+    "                                         user = usuario,\n",
+    "                                         password = clave)\n",
+    "    \n",
+    "    #Nos aseguramos de que se realiza la conexión con MySQL Server y con la base de datos:\n",
+    "    if db_transactions.is_connected():\n",
+    "        db_Info = db_transactions.get_server_info()\n",
+    "        print(f\"Conectado con la version {db_Info} de MySQL Server\")\n",
+    "        cursor = db_transactions.cursor()\n",
+    "        cursor.execute(\"select database();\")\n",
+    "        record = cursor.fetchone()\n",
+    "        print(f\"Conexión establecida con la base de datos {record[0]}\")\n",
+    "\n",
+    "    #Recuperamos el nombre de las tablas de la base de datos y los guardamos en una lista:\n",
+    "    query_tablas = \"\"\"SHOW tables\"\"\"\n",
+    "    cursor.execute(query_tablas)\n",
+    "    tablas = cursor.fetchall()\n",
+    "    print(tablas)\n",
+    "\n",
+    "    #Creamos un diccionario que contendrá un dataframe por elemento, y cuyo índice será el nombre de la tabla correspondiente:\n",
+    "    \n",
+    "    dataframe = {}\n",
+    "    nombres_tablas = []\n",
+    "\n",
+    "    #Usamos SQLAlchemy para obtener los registros y los nombres de las columnas de cada tabla:\n",
+    "    conexion = create_engine(f'mysql+mysqlconnector://{usuario}:{clave}@{host}/{db}')\n",
+    "\n",
+    "    for tabla in tablas:\n",
+    "        nombre_tabla = tabla[0]\n",
+    "        nombres_tablas.append(nombre_tabla)\n",
+    "        query = f'SELECT * FROM {nombre_tabla}'\n",
+    "        dataframe[nombre_tabla] = pd.read_sql(query,conexion)      \n",
+    "        print(f'Tabla {nombre_tabla}: \\n', dataframe[nombre_tabla].head(), '\\n') #Comprobación de que recuperamos correctamente las tablas de la BBDD\n",
+    "\n",
+    "\n",
+    "#Manejamos los posibles errores de sesión\n",
+    "except Error as e:\n",
+    "    print(\"Error en la conexión a MySQL:\", e)\n",
+    "    \n",
+    "#Cerramos el cursor y la conexión    \n",
+    "finally:\n",
+    "    if db_transactions.is_connected():\n",
+    "        cursor.close()\n",
+    "        db_transactions.close()\n",
+    "        print(\"Conexión a MySQL cerrada\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'db_transactions' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[12], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m      3\u001b[0m     db_transactions \u001b[38;5;241m=\u001b[39m sql\u001b[38;5;241m.\u001b[39mconnect(host \u001b[38;5;241m=\u001b[39m host,\n\u001b[0;32m----> 4\u001b[0m                                          database \u001b[38;5;241m=\u001b[39m \u001b[43mdb\u001b[49m,\n\u001b[1;32m      5\u001b[0m                                          user \u001b[38;5;241m=\u001b[39m usuario,\n\u001b[1;32m      6\u001b[0m                                          password \u001b[38;5;241m=\u001b[39m clave)\n\u001b[1;32m      8\u001b[0m     \u001b[38;5;66;03m#Nos aseguramos de que se realiza la conexión con MySQL Server y con la base de datos:\u001b[39;00m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'db' is not defined",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[12], line 45\u001b[0m\n\u001b[1;32m     41\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mError en la conexión a MySQL:\u001b[39m\u001b[38;5;124m\"\u001b[39m, e)\n\u001b[1;32m     43\u001b[0m \u001b[38;5;66;03m#Cerramos el cursor y la conexión    \u001b[39;00m\n\u001b[1;32m     44\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[0;32m---> 45\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[43mdb_transactions\u001b[49m\u001b[38;5;241m.\u001b[39mis_connected():\n\u001b[1;32m     46\u001b[0m         cursor\u001b[38;5;241m.\u001b[39mclose()\n\u001b[1;32m     47\u001b[0m         db_transactions\u001b[38;5;241m.\u001b[39mclose()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'db_transactions' is not defined"
+     ]
+    }
+   ],
+   "source": [
     "#Importamos los datos de nuestra base de datos:\n",
     "try:\n",
     "    db_transactions = sql.connect(host = host,\n",
@@ -6012,7 +6113,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
