--- a/Sprint 8/TascaS802.ipynb
+++ b/Sprint 8/TascaS802.ipynb
@@ -112,10 +112,7 @@
     "transacciones_mensuales = df_transaction['amount'].groupby([df_transaction['period']]).sum()\n",
     "ventas_mensuales = df_transaction_ok['amount'].groupby([df_transaction['period']]).sum()\n",
     "\n",
-    "#Ejercicio 5\n",
-    "df_transaction_declined = df_transaction[df_transaction['declined']==1].groupby('period', as_index=False).size()\n",
-    "\n",
-    "#Ejercicio 6\n",
+    "#Ejercicios 5 y 6\n",
     "df_company.rename(columns={'id': 'company_id'}, inplace=True)\n",
     "df_transaction_country = pd.merge(df_transaction, df_company, on='company_id', how='inner')\n",
     "df_countries_agrup = df_transaction_country.groupby('country', as_index=False).size().sort_values('size', ascending=False)\n",
@@ -437,22 +434,22 @@
     "\n",
     "# Pegue o escriba aquí el código de script:\n",
     "\n",
-    "df_transaction_declined = dataset\n",
+    "df_transaction_country = dataset\n",
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
-    "#Tenemos un problema con el orden del eje x. Vamos a ordenar el DataFrame antes de graficar:\n",
-    "dataset.sort_values('period', inplace=True)\n",
+    "df_countries_agrup = df_transaction_country.groupby('country', as_index=False).size().sort_values('size', ascending=False)\n",
     "\n",
-    "sns.lineplot(x=dataset['period'], y=dataset['size'], marker='o', linestyle='-', sort=False)\n",
     "\n",
-    "plt.title('Transacciones declinadas por periodo')\n",
-    "plt.ylabel('Transacciones declinadas')\n",
-    "plt.xlabel('Periodo')\n",
-    "plt.xticks(rotation=45)\n",
+    "sns.countplot(data=dataset, x=dataset['country'], hue='declined', stat='count', order=df_countries_agrup['country'])\n",
+    "\n",
+    "plt.title('Transacciones por país')\n",
+    "plt.ylabel('N.º transacciones')\n",
+    "plt.xlabel('Países')\n",
+    "plt.xticks(size = 'small', rotation=90)\n",
     "plt.tight_layout()\n",
     "\n",
     "plt.show()"
@@ -743,7 +740,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
